--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
             </div>
             <div class="product-text">WordPress, AWS, Google Analytics</div>
           </a>
-          <a href="https://ace-industry.co.jp/" target="_blank" class="product-link">
+          <a href="https://oshiman-gp.no9.co.jp/" target="_blank" class="product-link">
             <div class="product-img-cover">
               <img src="./assets/image/product5.png" alt="">
               <div class="product-link-cover"></div>
               <div class="product-link-text">サイトに訪れる</div>
             </div>
-            <div class="product-text">Google Analytics</div>
+            <div class="product-text">Vue.js, AWS, AOS</div>
           </a>
           <a href="http://taotajima.jp/works/xperia-ear-duo/" target="_blank" class="product-link">
             <div class="product-img-cover">
